--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ audioread==3.0.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
+customtkinter==5.1.2
+darkdetect==0.8.0
 decorator==5.1.1
 idna==3.4
 joblib==1.2.0
