--- a/Configuration.json
+++ b/Configuration.json
@@ -1,4 +1,34 @@
 {
     "Mappings": {
+        "Octave Down": "Gestures",
+        "Major Seventh Down": "Switch Spells",
+        "Minor Seventh Down": "Switch Left Hand",
+        "Major Sixth Down": "Lock",
+        "Minor Sixth Down": "Lock",
+        "Perfect Fifth Down": "Walk Back",
+        "Tritone Down": "Walk Back",
+        "Perfect Fourth Down": "Walk Left",
+        "Major Third Down": "Two-hand",
+        "Minor Third Down": "Two-hand",
+        "Major Second Down": "Roll",
+        "Minor Second Down": "Roll",
+        "Unison": "Nothing",
+        "Minor Second Up": "Interact",
+        "Major Second Up": "Interact",
+        "Minor Third Up": "Item",
+        "Major Third Up": "Item",
+        "Perfect Fourth Up": "Walk Right",
+        "Tritone Up": "Walk Forth",
+        "Perfect Fifth Up": "Walk Forth",
+        "Minor Sixth Up": "Stop",
+        "Major Sixth Up": "Stop",
+        "Minor Seventh Up": "Switch Right Hand",
+        "Major Seventh Up": "Switch Items",
+        "Octave Up": "Menu"
+    },
+    "Options": {
+        "Note Duration": 0.2,
+        "Minimum Frequency": 50,
+        "Maximum Frequency": 500
     }
 }
