--- a/Configuration.json
+++ b/Configuration.json
@@ -1,34 +1,34 @@
 {
     "Mappings": {
-        "Octave Down": "Gestures",
-        "Major Seventh Down": "Switch Spells",
-        "Minor Seventh Down": "Switch Left Hand",
-        "Major Sixth Down": "Lock",
-        "Minor Sixth Down": "Lock",
-        "Perfect Fifth Down": "Walk Back",
-        "Tritone Down": "Walk Back",
-        "Perfect Fourth Down": "Walk Left",
-        "Major Third Down": "Two-hand",
-        "Minor Third Down": "Two-hand",
-        "Major Second Down": "Roll",
-        "Minor Second Down": "Roll",
-        "Unison": "Nothing",
-        "Minor Second Up": "Interact",
-        "Major Second Up": "Interact",
-        "Minor Third Up": "Item",
-        "Major Third Up": "Item",
-        "Perfect Fourth Up": "Walk Right",
-        "Tritone Up": "Walk Forth",
-        "Perfect Fifth Up": "Walk Forth",
-        "Minor Sixth Up": "Stop",
-        "Major Sixth Up": "Stop",
-        "Minor Seventh Up": "Switch Right Hand",
+        "Octave Up": "Menu",
         "Major Seventh Up": "Switch Items",
-        "Octave Up": "Menu"
+        "Minor Seventh Up": "Switch Right Hand",
+        "Major Sixth Up": "Stop",
+        "Minor Sixth Up": "Stop",
+        "Perfect Fifth Up": "Walk Forth",
+        "Tritone Up": "Walk Forth",
+        "Perfect Fourth Up": "Walk Right",
+        "Major Third Up": "Item",
+        "Minor Third Up": "Item",
+        "Major Second Up": "Camera Left",
+        "Minor Second Up": "Camera Right",
+        "Unison": "Nothing",
+        "Minor Second Down": "Roll",
+        "Major Second Down": "Roll",
+        "Minor Third Down": "Two-hand",
+        "Major Third Down": "Two-hand",
+        "Perfect Fourth Down": "Walk Left",
+        "Tritone Down": "Walk Back",
+        "Perfect Fifth Down": "Walk Back",
+        "Minor Sixth Down": "Lock",
+        "Major Sixth Down": "Lock",
+        "Minor Seventh Down": "Switch Left Hand",
+        "Major Seventh Down": "Switch Spells",
+        "Octave Down": "Gestures"
     },
     "Options": {
-        "Note Duration": 0.2,
-        "Minimum Frequency": 50,
-        "Maximum Frequency": 500
+        "Note Duration": "0.3",
+        "Minimum Frequency": "50",
+        "Maximum Frequency": "500"
     }
 }
