--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 appdirs==1.4.4
 audioread==3.0.0
 certifi==2022.12.7
@@ -13,8 +14,13 @@ llvmlite==0.39.1
 numba==0.56.4
 numpy==1.23.5
 packaging==23.0
+pefile==2023.2.7
+Pillow==9.4.0
 pooch==1.6.0
 pycparser==2.21
+pyinstaller==5.9.0
+pyinstaller-hooks-contrib==2023.0
+pywin32-ctypes==0.2.0
 requests==2.28.2
 resampy==0.4.2
 scikit-learn==1.2.1
