--- a/Configuration.json
+++ b/Configuration.json
@@ -1,34 +1,34 @@
 {
     "Mappings": {
-        "Octave Down": "Gestures",
-        "Major Seventh Down": "Switch Spells",
-        "Minor Seventh Down": "Switch Left Hand",
-        "Major Sixth Down": "Lock",
-        "Minor Sixth Down": "Lock",
-        "Perfect Fifth Down": "Walk Back",
-        "Tritone Down": "Walk Back",
-        "Perfect Fourth Down": "Walk Left",
-        "Major Third Down": "Two-hand",
-        "Minor Third Down": "Two-hand",
-        "Major Second Down": "Roll",
-        "Minor Second Down": "Roll",
-        "Unison": "Nothing",
-        "Minor Second Up": "Interact",
-        "Major Second Up": "Interact",
-        "Minor Third Up": "Item",
-        "Major Third Up": "Item",
-        "Perfect Fourth Up": "Walk Right",
-        "Tritone Up": "Walk Forth",
-        "Perfect Fifth Up": "Walk Forth",
-        "Minor Sixth Up": "Stop",
-        "Major Sixth Up": "Stop",
-        "Minor Seventh Up": "Switch Right Hand",
-        "Major Seventh Up": "Switch Items",
-        "Octave Up": "Menu"
+        "Do+": "Menu",
+        "Ti+": "Switch Spells",
+        "La#+": "Switch Items",
+        "La+": "Heavy Attack",
+        "Sol#+": "Light Attack",
+        "Sol+": "Walk Forth",
+        "Fa#+": "Camera Right",
+        "Fa+": "Walk Right",
+        "Mi+": "Interact",
+        "Re#+": "Interact",
+        "Re+": "Roll",
+        "Do#+": "Roll",
+        "Do": "Stop",
+        "Ti-": "Lock",
+        "La#-": "Two-hand",
+        "La-": "Item",
+        "Sol#-": "Item",
+        "Sol-": "Walk Back",
+        "Fa#-": "Camera Left",
+        "Fa-": "Walk Left",
+        "Mi-": "Guard",
+        "Re#-": "Parry",
+        "Re-": "Switch Left Hand",
+        "Do#-": "Switch Right Hand",
+        "Do-": "Gestures"
     },
     "Options": {
-        "Note Duration": 0.2,
-        "Minimum Frequency": 50,
-        "Maximum Frequency": 500
+        "Note Duration": "0.3",
+        "Fundamental Frequency": "220",
+        "Output Volume": "10"
     }
 }
