--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,6 @@
-altgraph==0.17.3
-appdirs==1.4.4
-audioread==3.0.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
-customtkinter==5.1.2
-darkdetect==0.8.0
-decorator==5.1.1
-idna==3.4
-joblib==1.2.0
-librosa==0.9.2
-llvmlite==0.39.1
-numba==0.56.4
-numpy==1.23.5
-packaging==23.0
-pefile==2023.2.7
-Pillow==9.4.0
-pooch==1.6.0
-pycparser==2.21
-pyinstaller==5.9.0
-pyinstaller-hooks-contrib==2023.0
-pywin32-ctypes==0.2.0
-requests==2.28.2
-resampy==0.4.2
-scikit-learn==1.2.1
-scipy==1.10.0
-sounddevice==0.4.5
-soundfile==0.11.0
-threadpoolctl==3.1.0
-urllib3==1.26.14
-vgamepad==0.0.8
+customtkinter
+Pillow
+librosa
+sounddevice
+vgamepad
+pyinstaller
